# desktop-notes-app

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  mac-build.yml  macos_build.yml  windows_build.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/mac-patch/: Cargo.toml  build.rs
src-tauri/notes_graph_db/: .wal  catalog.kz  metadata.kz
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: db.rs
src-tauri/src/schema/: notes.rs
src/app/: layout.tsx  page.tsx
src/components/: backendeditor.tsx  customdropdown.tsx  editor.tsx
src/styles/: globals.css
src/types/: blocknote.ts
