[package]
name = "notes-app"
version = "1.0.0"
description = "Notes App"
authors = ["mstomar"]
edition = "2021"

[lib]
name = "notes_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
